# mmc2miner

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  cpu-miner.c  mknsis.sh
